# Epicki-Projekt-UwU

./: CMakeLists.txt  README.md  critter.cpp  critter.h  items.h  player.h
include/: critter.h  cycle_day.h  entity.h  gathering.h  items.h  menu.h  perlin.h  plants.h  player.h  summary_window.h  world.h
src/: critter.cpp  cycle_day.cpp  entity.cpp  gathering.cpp  items.cpp  main.cpp  main_without_menu.cpp  menu.cpp  perlin.cpp  plants.cpp  player.cpp  summary_window.cpp  world.cpp
